--- a/src/style/main.css
+++ b/src/style/main.css
@@ -54,6 +54,7 @@ h1 small {
 .not-streaming {
     padding: 3.5rem;
     width: 400px;
+    max-width: 95vw;
     font-size: 1.5rem; 
     line-height: 1.75rem;
     background-image: linear-gradient(#222, #111);
