--- a/src/style/main.css
+++ b/src/style/main.css
@@ -72,6 +72,7 @@ h1 small {
     bottom: -603px;
     box-shadow: 0 5px 20px black;
     transition: 0.6s all cubic-bezier(0.68, -0.55, 0.27, 1.55);
+    max-height: 98vh;
 }
 
 .chatroom__handle {
